# Santiago-Ornelas-Ramirez-DE

./: readme.md
.github/workflows/: python-app.yml
bike_data_set/: .gitignore  databricks.yml  pyproject.toml  pyproject.toml.  readme.md
bike_data_set/bike_data_project/: bronze_driver.py  bronze_silver_driver.ipynb  gold_driver.py  silver_driver.py
bike_data_set/bike_data_project/config/: customer_gold_metadata.py  meta_driven_ingestion.py  meta_driven_transformations.py
bike_data_set/bike_data_project/runner/: bronze_runner.py  gold_runner.py  silver_runner.py
bike_data_set/bike_data_project/transformations/: bronze.py  gold.py  silver_preprocess.py
bike_data_set/resources/jobs/: job_def.yml
bike_data_set/skeletons in the closet/: bronze_silver_driver.ipynb  gold_notebook.ipynb
bike_data_set/src/bike_data_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bike_data_set/src/bike_data_project/config/: customer_gold_metadata.py  meta_driven_aggregation.py  meta_driven_ingestion.py  meta_driven_transformations.py
bike_data_set/src/bike_data_project/drivers/: bronze_driver.py  gold_driver.py  silver_driver.py
bike_data_set/src/bike_data_project/runner/: bronze_runner.py  gold_runner.py  silver_runner.py
bike_data_set/src/bike_data_project/skeletons in the closet/: meta_data_creator.py  pre_conf_bronze_loop.ipynb  silver_notebook.ipynb
bike_data_set/src/bike_data_project/transformations/: bronze.py  gold.py  silver_clean.py  silver_preprocess.py  silver_upload.py
bike_data_set/tests/: conftest.py  test_apply_enum_aliases.py  test_default_transformations.py  test_is_table_empty.py  test_second_nf_configuration.py  tests_second_nf_configuration.py
bike_data_set/tests/integration/: test_ingestion.py
bike_data_set/tests/unit/: conftest.py  test_default_transformations.py  test_second_nf_configuration.py
