[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-data-project"
version = "0.1.0"
description = "Bike data medallion pipeline"
authors = [{ name = "Santiago" }]
dependencies = [
  "pyspark>=3.5.0",
  "delta-spark>=3.2.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]