[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-data-project"
version = "0.1.0"
description = "Bike data medallion pipeline"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"

dependencies = []


[project.optional-dependencies]
ci = [
  "pyspark==3.5.0",
  "delta-spark==3.2.0"
]

dev = [
  "pytest",
  "ruff",
  "build"
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100
target-version = "py311"


[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E501"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[project.scripts]
bronze = "bike_data_project.drivers.bronze_driver:main"
silver = "bike_data_project.drivers.silver_driver:main"
gold = "bike_data_project.drivers.gold_driver:main"